--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <title>HTML and CSS Cheat Sheet</title>
-    <link href="styles.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
