--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <header>
         <h1>Sarah's Cheat Sheet for HTML and CSS</h1>
+        <a href='https://rosenplants.github.io/'>Return to homepage</a>
     </header>
     <main>
         <div class="table-html">
@@ -143,16 +144,44 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Tag</th>
-                            <th>Name</th>
+                            <th>Property</th>
+                            <th>Common Units or Values</th>
                             <th>Description</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>test</td>
-                            <td>test</td>
-                            <td>test</td>
+                            <th colspan="3">Font Styles</th>
+                        </tr>
+                        <tr>
+                            <td>font</td>
+                            <td>font-style font-variant font-weight font-size font-family</td>
+                            <td>Shorthand to set the above properties in one line. Set in the above order without commas (unless you're setting a generic font-family, the use commas there)</td>
+                        </tr>
+                        <tr>
+                            <td>font-size</td>
+                            <td>px, em, rem, %</td>
+                            <td>Sets the size of the font. px sets the absolute size in pixels, the other units set the size in relation to either the parent's or root's size.</td>
+                        </tr>
+                        <tr>
+                            <td>font-family</td>
+                            <td>FirstChoice, "Second Choice Font", generic family</td>
+                            <td>Specifies the font the browser should try to use and what to fall back on if that doesn't work. Use quotes around names with spaces.</td>
+                        </tr>
+                        <tr>
+                            <td>font-weight</td>
+                            <td>normal, thin, bold, 100-900</td>
+                            <td>Sets the thickness of the text characters.</td>
+                        </tr>
+                        <tr>
+                            <td>font-style</td>
+                            <td>normal, italic, oblique, inherit, initial</td>
+                            <td>Makes the text italic, oblique, or normal.</td>
+                        </tr>
+                        <tr>
+                            <td>font-variant</td>
+                            <td>small-caps</td>
+                            <td>Changes all lowercase letters to uppercase letters in a smaller font-size than any originally uppercase letters.</td>
                         </tr>
                     </tbody>
                 </table>
